[workspace]
members = [
  "crates/*"
]
resolver = "3"

# local crates
[workspace.dependencies]
steam-language-gen = { path = "./crates/steam-language-gen", version = "0.1.4" }
steam-mobile = { path = "./crates/steam-mobile", version = "0.5.0", default-features = false }
steam-protobuf = { path = "./crates/steam-protobuf", version = "0.2.1" }
steamid-parser = { path = "./crates/steamid-parser", version = "0.2.1" }
tappet = { path = "./crates/tappet", version = "0.6.0" }
tappet-derive = { path = "./crates/tappet-derive", version = "0.3.2" }

proxied = { version = "^1", features = ["reqwest"] }

base64 = "^0.22"
bytes = "^1"
const_format = "^0.2"
derive_more = { version = "2.0.1", features = ["full"] }
rand = "^0.9"
reqwest = { version = "^0.12", features = ["cookies", "multipart", "json"] }
regex = "^1"
futures = "^0.3"
futures-util = "^0.3"
futures-timer = "^3"
parking_lot = "^0.12"
strum = "0.27"
strum_macros = "0.27"

thiserror = "2.0"

erased-serde = "^0.4"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
serde_repr = "^0"
