[package]
name = "steam-crypto"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
openssl = "0.10.73"
lazy-static-include = "2.3.0"
lazy_static = "1.5.0"
crc = "1"
crc32fast = "1"
bytes = "0.5"
byteorder = "1"
