[package]
name = "steam-crypto"
version = "0.1.0"
authors = ["Martin <martin@hotmail.com.br>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.1"
openssl = "0.10.73"
lazy-static-include = "3.2.1"
lazy_static = "1.5.0"
crc = "3"
crc32fast = "1"
bytes = "1.10"
byteorder = "1"
