[package]
name = "steam-totp"
version = "0.2.2"
authors = ["Martin <martin@hotmail.com.br>", "Leorii <leorii@pm.me>"]
edition = "2024"
repository = "https://github.com/saskenuba/SteamHelper-rs/tree/master/crates/steam-totp"
license = "MIT"
description = "Utility crate to generate Steam TOTP codes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
crypto-mac = { version = "0.11.1", features = ["std"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "^0.12", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
sha-1 = "0.10.1"
url = "2"
thiserror.workspace = true